fix layout issue in tweet detail

--- a/src/features/mainStyles.css
+++ b/src/features/mainStyles.css
@@ -232,6 +232,10 @@ html.dark body {
   filter: brightness(100) drop-shadow(0 1px 1px rgba(20, 23, 26, 0.8));
 }
 
+.btd-profile-label.pronouns {
+  flex-shrink: 0;
+}
+
 .btd-profile-label.pronouns + .other-replies {
   text-transform: lowercase;
 }
